8217782: Spill detection broken after JDK-8217716

Reviewed-by: shade, thartmann